--- a/qrcode/generator.html
+++ b/qrcode/generator.html
@@ -6,7 +6,7 @@
   <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding: 40px; }
-    #qrcode { margin-top: 20px; }
+    #qrcode { margin-bottom: 20px; }
   </style>
 </head>
 <body>
