--- a/demo.html
+++ b/demo.html
@@ -1,192 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>WebRTC Video Conference with TURN, QR & Scanner</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
-  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 10px;
-      margin: 0;
-      background: #f9f9f9;
-    }
-    h2 {
-      font-size: 1.2rem;
-    }
-    #videos {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 10px;
-    }
-    video {
-      width: 100%;
-      max-width: 300px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-    }
-    textarea {
-      width: 100%;
-      height: 80px;
-      margin-top: 10px;
-      font-size: 0.9rem;
-    }
-    button {
-      padding: 10px;
-      margin: 5px;
-      font-size: 0.9rem;
-    }
-    canvas {
-      margin: 10px auto;
-      display: block;
-    }
-    #qr-reader {
-      width: 100%;
-      max-width: 320px;
-      margin: 20px auto;
-    }
-  </style>
-</head>
+<html>
+<head><title>Twilio Video Call</title></head>
 <body>
-  <h2>WebRTC Video Conference with TURN, QR & Scanner</h2>
+  <h1>Twilio Video</h1>
+  <input id="room" placeholder="Room name" />
+  <button onclick="join()">Join</button>
+  <div id="video-container"></div>
 
-  <div id="videos">
-    <video id="localVideo" autoplay muted playsinline></video>
-  </div>
-
-  <div>
-    <button id="start">Start Camera</button>
-    <button id="createRoom">Create Room</button>
-    <button id="joinRoom">Join Room</button>
-  </div>
-
-  <textarea id="signaling" placeholder="Paste or copy signaling data here..."></textarea><br>
-  <button id="send">Apply</button>
-  <canvas id="qr"></canvas>
-  <div id="qr-reader"></div>
-
+  <script src="https://media.twiliocdn.com/sdk/js/video/releases/2.20.0/twilio-video.min.js"></script>
   <script>
-    const signaling = document.getElementById('signaling');
-    const qrCanvas = document.getElementById('qr');
-    const localVideo = document.getElementById('localVideo');
-    const videos = document.getElementById('videos');
-
-    let localStream;
-    const peers = [];
-
-    const iceServers = [
-      { urls: 'stun:stun.l.google.com:19302' },
-      {
-        urls: 'turn:global.relay.metered.ca:443',
-        username: 'openai',
-        credential: 'webrtc'
-      }
-    ];
-
-    document.getElementById('start').onclick = async () => {
-      localStream = await navigator.mediaDevices.getUserMedia({ video: true, audio: true });
-      localVideo.srcObject = localStream;
-    };
-
-    function createPeerConnection() {
-      const pc = new RTCPeerConnection({ iceServers });
-      const pendingCandidates = [];
-
-      localStream.getTracks().forEach(track => pc.addTrack(track, localStream));
-
-      pc.onicecandidate = ({ candidate }) => {
-        if (candidate) {
-          const msg = JSON.stringify({ candidate });
-          signaling.value = msg;
-          QRCode.toCanvas(qrCanvas, msg, { width: 200 });
-        }
-      };
-
-      pc.ontrack = (event) => {
-        const remoteVideo = document.createElement('video');
-        remoteVideo.autoplay = true;
-        remoteVideo.playsInline = true;
-        remoteVideo.srcObject = event.streams[0];
-        remoteVideo.dataset.peerId = peers.length;
-        videos.appendChild(remoteVideo);
-      };
-
-      pc.onconnectionstatechange = () => {
-        if (pc.connectionState === 'disconnected' || pc.connectionState === 'failed' || pc.connectionState === 'closed') {
-          const index = peers.findIndex(p => p.pc === pc);
-          if (index !== -1) {
-            peers.splice(index, 1);
-            const vid = videos.querySelector(`video[data-peer-id="${index}"]`);
-            if (vid) videos.removeChild(vid);
-          }
-        }
-      };
-
-      return { pc, pendingCandidates };
+    async function join() {
+      const room = document.getElementById('room').value;
+      const res = await fetch(`https://hf4cvwrkdbei7ziphvq2rp7ov40sovcl.lambda-url.us-east-1.on.aws?identity=guest&room=${room}`);
+      const { token } = await res.json();
+      const roomObj = await Twilio.Video.connect(token, { name: room });
+      roomObj.on('participantConnected', participant => {
+        participant.on('trackSubscribed', track => {
+          document.getElementById('video-container').appendChild(track.attach());
+        });
+      });
     }
-
-    document.getElementById('createRoom').onclick = async () => {
-      const { pc, pendingCandidates } = createPeerConnection();
-      peers.push({ pc, pendingCandidates });
-
-      const offer = await pc.createOffer();
-      await pc.setLocalDescription(offer);
-      const msg = JSON.stringify({ sdp: pc.localDescription });
-      signaling.value = msg;
-      QRCode.toCanvas(qrCanvas, msg, { width: 200 });
-    };
-
-    document.getElementById('joinRoom').onclick = async () => {
-      const { pc, pendingCandidates } = createPeerConnection();
-      peers.push({ pc, pendingCandidates });
-
-      const data = JSON.parse(signaling.value);
-      if (data.sdp) {
-        await pc.setRemoteDescription(new RTCSessionDescription(data.sdp));
-        const answer = await pc.createAnswer();
-        await pc.setLocalDescription(answer);
-        const msg = JSON.stringify({ sdp: pc.localDescription });
-        signaling.value = msg;
-        QRCode.toCanvas(qrCanvas, msg, { width: 200 });
-      }
-    };
-
-    document.getElementById('send').onclick = async () => {
-      const data = JSON.parse(signaling.value);
-      for (const { pc, pendingCandidates } of peers) {
-        if (data.sdp) {
-          await pc.setRemoteDescription(new RTCSessionDescription(data.sdp));
-          while (pendingCandidates.length > 0) {
-            await pc.addIceCandidate(pendingCandidates.shift());
-          }
-        } else if (data.candidate) {
-          try {
-            await pc.addIceCandidate(new RTCIceCandidate(data.candidate));
-          } catch (e) {
-            pendingCandidates.push(data.candidate);
-          }
-        }
-      }
-    };
-
-    const scanner = new Html5Qrcode("qr-reader");
-    Html5Qrcode.getCameras().then(devices => {
-      if (devices && devices.length) {
-        scanner.start(
-          { facingMode: "environment" },
-          { fps: 10, qrbox: 250 },
-          text => {
-            signaling.value = text;
-            document.getElementById('send').click();
-          },
-          error => {}
-        );
-      }
-    });
   </script>
 </body>
 </html>
